--- a/src/curobo/content/configs/robot/fr3_algr_zed2i.yml
+++ b/src/curobo/content/configs/robot/fr3_algr_zed2i.yml
@@ -58,58 +58,58 @@ robot_cfg:
     collision_sphere_buffer: 0.001 # float or Dict[str, float]
     extra_collision_spheres: {}
     self_collision_ignore: {
-        "fr3_link0": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7",     "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "fr3_link1": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7",     "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "fr3_link2": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7",     "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "fr3_link3": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7",     "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "fr3_link4": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7",     "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "fr3_link5": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7",     "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "fr3_link6": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7",     "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "fr3_link7": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7",     "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_palm": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7",  "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_if_bs": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7", "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_if_px": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7", "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_if_md": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7", "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_if_ds": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7", "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_mf_bs": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7", "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_mf_px": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7", "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_mf_md": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7", "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_mf_ds": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7", "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_rf_bs": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7", "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_rf_px": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7", "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_rf_md": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7", "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_rf_ds": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7", "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_th_mp": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7", "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_th_bs": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7", "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_th_px": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7", "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
-        "algr_rh_th_ds": ["fr3_link0", "fr3_link1", "fr3_link2", "fr3_link3", "fr3_link4", "fr3_link5", "fr3_link6", "fr3_link7", "algr_rh_palm", "algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_bs", "algr_rh_if_px", "algr_rh_mf_px", "algr_rh_rf_px", "algr_rh_th_px", "algr_rh_if_md", "algr_rh_mf_md", "algr_rh_rf_md", "algr_rh_th_mp", "algr_rh_if_ds", "algr_rh_mf_ds", "algr_rh_rf_ds", "algr_rh_th_ds"],
+        "fr3_link0": ["fr3_link1"],
+        "fr3_link1": ["fr3_link2"],
+        "fr3_link2": ["fr3_link3"],
+        "fr3_link3": ["fr3_link4"],
+        "fr3_link4": ["fr3_link5"],
+        "fr3_link5": ["fr3_link6"],
+        "fr3_link6": ["fr3_link7"],
+        "fr3_link7": ["algr_rh_palm"],
+        "algr_rh_palm":  ["algr_rh_if_bs", "algr_rh_mf_bs", "algr_rh_rf_bs", "algr_rh_th_mp"],
+        "algr_rh_if_bs": ["algr_rh_if_px", "algr_rh_if_md", "algr_rh_if_ds"],
+        "algr_rh_if_px": ["algr_rh_if_md", "algr_rh_if_ds"],
+        "algr_rh_if_md": ["algr_rh_if_ds"],
+        "algr_rh_if_ds": [],
+        "algr_rh_mf_bs": ["algr_rh_mf_px", "algr_rh_mf_md", "algr_rh_mf_ds"],
+        "algr_rh_mf_px": ["algr_rh_mf_md", "algr_rh_mf_ds"],
+        "algr_rh_mf_md": ["algr_rh_mf_ds"],
+        "algr_rh_mf_ds": [],
+        "algr_rh_rf_bs": ["algr_rh_rf_px", "algr_rh_rf_md", "algr_rh_rf_ds"],
+        "algr_rh_rf_px": ["algr_rh_rf_md", "algr_rh_rf_ds"],
+        "algr_rh_rf_md": ["algr_rh_rf_ds"],
+        "algr_rh_rf_ds": [],
+        "algr_rh_th_mp": ["algr_rh_th_bs", "algr_rh_th_px", "algr_rh_th_ds"],
+        "algr_rh_th_bs": ["algr_rh_th_px", "algr_rh_th_ds"],
+        "algr_rh_th_px": ["algr_rh_th_ds"],
+        "algr_rh_th_ds": [],
     }
     self_collision_buffer: {
-        "fr3_link0": -0.01,
-        "fr3_link1": -0.01,
-        "fr3_link2": -0.01,
-        "fr3_link3": -0.01,
-        "fr3_link4": -0.01,
-        "fr3_link5": -0.01,
-        "fr3_link6": -0.01,
-        "fr3_link7": -0.01,
+        "fr3_link0": -0.02,
+        "fr3_link1": -0.02,
+        "fr3_link2": -0.02,
+        "fr3_link3": -0.02,
+        "fr3_link4": -0.02,
+        "fr3_link5": -0.02,
+        "fr3_link6": -0.02,
+        "fr3_link7": -0.02,
         "algr_rh_palm": -0.01,
-        "algr_rh_if_bs": -0.02,
-        "algr_rh_if_px": -0.02,
-        "algr_rh_if_md": -0.02,
-        "algr_rh_if_ds": -0.02,
-        "algr_rh_mf_bs": -0.02,
-        "algr_rh_mf_px": -0.02,
-        "algr_rh_mf_md": -0.02,
-        "algr_rh_mf_ds": -0.02,
-        "algr_rh_rf_bs": -0.02,
-        "algr_rh_rf_px": -0.02,
-        "algr_rh_rf_md": -0.02,
-        "algr_rh_rf_ds": -0.02,
-        "algr_rh_th_mp": -0.02,
-        "algr_rh_th_bs": -0.02,
-        "algr_rh_th_px": -0.02,
-        "algr_rh_th_ds": -0.02,
+        "algr_rh_if_bs": -0.03,
+        "algr_rh_if_px": -0.03,
+        "algr_rh_if_md": -0.03,
+        "algr_rh_if_ds": -0.03,
+        "algr_rh_mf_bs": -0.03,
+        "algr_rh_mf_px": -0.03,
+        "algr_rh_mf_md": -0.03,
+        "algr_rh_mf_ds": -0.03,
+        "algr_rh_rf_bs": -0.03,
+        "algr_rh_rf_px": -0.03,
+        "algr_rh_rf_md": -0.03,
+        "algr_rh_rf_ds": -0.03,
+        "algr_rh_th_mp": -0.03,
+        "algr_rh_th_bs": -0.03,
+        "algr_rh_th_px": -0.03,
+        "algr_rh_th_ds": -0.03,
     }
 
     use_global_cumul: True
