--- a/src/curobo/content/configs/robot/fr3_algr_zed2i.yml
+++ b/src/curobo/content/configs/robot/fr3_algr_zed2i.yml
@@ -82,34 +82,34 @@ robot_cfg:
         "algr_rh_th_mp": ["algr_rh_th_bs", "algr_rh_th_px", "algr_rh_th_ds"],
         "algr_rh_th_bs": ["algr_rh_th_px", "algr_rh_th_ds"],
         "algr_rh_th_px": ["algr_rh_th_ds"],
-        "algr_rh_th_ds": [],
+        "algr_rh_th_ds": ["algr_rh_palm"],  # Not sure why this is needed, but it is...
     }
     self_collision_buffer: {
-        "fr3_link0": -0.02,
-        "fr3_link1": -0.02,
-        "fr3_link2": -0.02,
-        "fr3_link3": -0.02,
-        "fr3_link4": -0.02,
-        "fr3_link5": -0.02,
-        "fr3_link6": -0.02,
-        "fr3_link7": -0.02,
-        "algr_rh_palm": -0.01,
-        "algr_rh_if_bs": -0.03,
-        "algr_rh_if_px": -0.03,
-        "algr_rh_if_md": -0.03,
-        "algr_rh_if_ds": -0.03,
-        "algr_rh_mf_bs": -0.03,
-        "algr_rh_mf_px": -0.03,
-        "algr_rh_mf_md": -0.03,
-        "algr_rh_mf_ds": -0.03,
-        "algr_rh_rf_bs": -0.03,
-        "algr_rh_rf_px": -0.03,
-        "algr_rh_rf_md": -0.03,
-        "algr_rh_rf_ds": -0.03,
-        "algr_rh_th_mp": -0.03,
-        "algr_rh_th_bs": -0.03,
-        "algr_rh_th_px": -0.03,
-        "algr_rh_th_ds": -0.03,
+        "fr3_link0":     -0.02,
+        "fr3_link1":     -0.02,
+        "fr3_link2":     -0.02,
+        "fr3_link3":     -0.02,
+        "fr3_link4":     -0.02,
+        "fr3_link5":     -0.02,
+        "fr3_link6":     -0.02,
+        "fr3_link7":     -0.02,
+        "algr_rh_palm":  -0.02,
+        "algr_rh_if_bs": -0.02,
+        "algr_rh_if_px": -0.02,
+        "algr_rh_if_md": -0.02,
+        "algr_rh_if_ds": -0.02,
+        "algr_rh_mf_bs": -0.02,
+        "algr_rh_mf_px": -0.02,
+        "algr_rh_mf_md": -0.02,
+        "algr_rh_mf_ds": -0.02,
+        "algr_rh_rf_bs": -0.02,
+        "algr_rh_rf_px": -0.02,
+        "algr_rh_rf_md": -0.02,
+        "algr_rh_rf_ds": -0.02,
+        "algr_rh_th_mp": -0.02,
+        "algr_rh_th_bs": -0.02,
+        "algr_rh_th_px": -0.02,
+        "algr_rh_th_ds": -0.02,
     }
 
     use_global_cumul: True
