--- a/src/curobo/content/configs/robot/iiwa14.yml
+++ b/src/curobo/content/configs/robot/iiwa14.yml
@@ -1,3 +1,4 @@
+# Copied from franka.yml with modifications
 robot_cfg:
   kinematics:
     base_link: world
@@ -34,23 +35,19 @@ robot_cfg:
   
     cspace:
       joint_names:
-        [
-          "lbr_iiwa_joint_1",
-          "lbr_iiwa_joint_2",
-          "lbr_iiwa_joint_3",
-          "lbr_iiwa_joint_4",
-          "lbr_iiwa_joint_5",
-          "lbr_iiwa_joint_6",
-          "lbr_iiwa_joint_7",
+        ["panda_joint1","panda_joint2","panda_joint3","panda_joint4", "panda_joint5",
+         "panda_joint6","panda_joint7","panda_finger_joint1", "panda_finger_joint2"
         ]
       cspace_distance_weight:
         - 1.0
-        - 0.9
-        - 0.8
-        - 0.8
-        - 0.7
-        - 0.6
-        - 0.5
+        - 1.0
+        - 1.0
+        - 1.0
+        - 1.0
+        - 1.0
+        - 1.0
+        - 1.0
+        - 1.0
 
       null_space_weight:
         - 1.0
@@ -60,14 +57,18 @@ robot_cfg:
         - 1.0
         - 1.0
         - 1.0
+        - 1.0
+        - 1.0
 
       retract_config:
-        - -0.5235987755982988
-        - 0.5235987755982988
         - 0.0
-        - -1.5707963267948966
+        - -1.3
         - 0.0
-        - 1.0471975511965976
-        - -2.0943951023931953
+        - -2.5
+        - 0.0
+        - 1.0
+        - 0.0
+        - 0.04
+        - 0.04
       max_acceleration: 15.0
       max_jerk: 500.0
