--- a/src/curobo/content/configs/robot/iiwa_allegro.yml
+++ b/src/curobo/content/configs/robot/iiwa_allegro.yml
@@ -10,14 +10,14 @@
 ##
 robot_cfg:
   kinematics:
-    base_link: base_link
+    base_link: iiwa14_link_0
     collision_link_names:
-      - iiwa7_link_1
-      - iiwa7_link_2
-      - iiwa7_link_3
-      - iiwa7_link_4
-      - iiwa7_link_5
-      - iiwa7_link_6
+      - iiwa14_link_1
+      - iiwa14_link_2
+      - iiwa14_link_3
+      - iiwa14_link_4
+      - iiwa14_link_5
+      - iiwa14_link_6
       - palm_link
       - index_link_1
       - index_link_2
@@ -31,12 +31,12 @@ robot_cfg:
       - thumb_link_2
       - thumb_link_3
     mesh_link_names:
-      - iiwa7_link_1
-      - iiwa7_link_2
-      - iiwa7_link_3
-      - iiwa7_link_4
-      - iiwa7_link_5
-      - iiwa7_link_6
+      - iiwa14_link_1
+      - iiwa14_link_2
+      - iiwa14_link_3
+      - iiwa14_link_4
+      - iiwa14_link_5
+      - iiwa14_link_6
       - palm_link
       - index_link_1
       - index_link_2
@@ -59,12 +59,12 @@ robot_cfg:
       - ring_link_3
       - thumb_link_3
     self_collision_buffer:
-      iiwa7_link_1: -0.02
-      iiwa7_link_2: 0.0
-      iiwa7_link_3: 0.0
-      iiwa7_link_4: 0.0
-      iiwa7_link_5: 0.0
-      iiwa7_link_6: 0.0
+      iiwa14_link_1: -0.02
+      iiwa14_link_2: 0.0
+      iiwa14_link_3: 0.0
+      iiwa14_link_4: 0.0
+      iiwa14_link_5: 0.0
+      iiwa14_link_6: 0.0
       index_link_1: -0.0
       index_link_2: -0.0
       index_link_3: 0.0
@@ -78,12 +78,12 @@ robot_cfg:
       thumb_link_2: 0.0
       thumb_link_3: 0.0
     self_collision_ignore: {
-        iiwa7_link_1: [iiwa7_link_2, iiwa7_link_3],
-        iiwa7_link_2: [iiwa7_link_3, iiwa7_link_4],
-        iiwa7_link_3: [iiwa7_link_4, iiwa7_link_5],
-        iiwa7_link_4: [iiwa7_link_5, iiwa7_link_6],
-        iiwa7_link_5: [iiwa7_link_6, palm_link],
-        iiwa7_link_6: [palm_link],
+        iiwa14_link_1: [iiwa14_link_2, iiwa14_link_3],
+        iiwa14_link_2: [iiwa14_link_3, iiwa14_link_4],
+        iiwa14_link_3: [iiwa14_link_4, iiwa14_link_5],
+        iiwa14_link_4: [iiwa14_link_5, iiwa14_link_6],
+        iiwa14_link_5: [iiwa14_link_6, palm_link],
+        iiwa14_link_6: [palm_link],
         palm_link:
           [
             index_link_1,
@@ -96,16 +96,16 @@ robot_cfg:
           ],
         index_link_1: [index_link_2, middle_link_1, middle_link_2],
         index_link_2: [index_link_3],
-        #index_link_3: [iiwa7_link_2],
+        #index_link_3: [iiwa14_link_2],
         middle_link_1: [middle_link_2, ring_link_1, ring_link_2],
         middle_link_2: [middle_link_3],
         #middle_link_3: [],
         ring_link_1: [ring_link_2],
         ring_link_2: [ring_link_3],
-        #ring_link_3: [iiwa7_link_2],
+        #ring_link_3: [iiwa14_link_2],
         thumb_link_2: [thumb_link_3],
       }
-    #thumb_link_3: [iiwa7_link_2],
+    #thumb_link_3: [iiwa14_link_2],
     urdf_path: robot/iiwa_allegro_description/iiwa_allegro.urdf
     asset_root_path: robot/iiwa_allegro_description
     usd_path: robot/iiwa_allegro_description/iiwa_allegro.usda
@@ -113,13 +113,13 @@ robot_cfg:
     cspace:
       joint_names:
         [
-          "iiwa7_joint_1",
-          "iiwa7_joint_2",
-          "iiwa7_joint_3",
-          "iiwa7_joint_4",
-          "iiwa7_joint_5",
-          "iiwa7_joint_6",
-          "iiwa7_joint_7",
+          "iiwa14_joint_1",
+          "iiwa14_joint_2",
+          "iiwa14_joint_3",
+          "iiwa14_joint_4",
+          "iiwa14_joint_5",
+          "iiwa14_joint_6",
+          "iiwa14_joint_7",
           "index_joint_0",
           "index_joint_1",
           "index_joint_2",
@@ -175,7 +175,7 @@ robot_cfg:
         - 1.0
         - 1.0
         - 1.0
-        - 1.0 #
+        - 1.0
         - 1.0
         - 1.0
         - 1.0
@@ -195,20 +195,20 @@ robot_cfg:
         - 0.6
         - 2.1
         - 0.0
-        - 0.7242903113365173
-        - 0.7242903113365173
-        - 0.7242903113365173
         - 0.0
-        - 0.7242903113365173
-        - 0.7242903113365173
-        - 0.7242903113365173
         - 0.0
-        - 0.7242903113365173
-        - 0.7242903113365173
-        - 0.9249972105026245
-        - 0.4101402759552002
-        - 0.7242903113365173
-        - 0.7417430877685547
-        - 0.7242903113365173
+        - 0.0
+        - 0.0
+        - 0.0
+        - 0.0
+        - 0.0
+        - 0.0
+        - 0.0
+        - 0.0
+        - 0.0
+        - 0.0
+        - 0.0
+        - 0.0
+        - 0.0
       max_acceleration: 15.0
       max_jerk: 500.0
